# smart-health-monitoring-and-warning-system

./: .env  .gitignore  README.md  docker-compose.yml  package.json
application/frontend/: index.html
esp32/: CMakeLists.txt  README.md  diagram.json  wokwi.toml
esp32/components/_button/: CMakeLists.txt  button.cc  button.h
esp32/components/alarm/: CMakeLists.txt  alarm_manager.c  alarm_manager.h
esp32/components/common/: CMakeLists.txt  sytem_config.h
esp32/components/display/: CMakeLists.txt  oled_display.c  oled_display.h
esp32/components/gpio/: gpio_handler.c  gpio_handler.h
esp32/components/http/: CMakeLists.txt  http_server.c  http_server.h
esp32/components/mqtt/: mqtt_tb.c  mqtt_tb.h
esp32/components/mqtt_tb/: CMakeLists.txt  mqtt_tb.c  mqtt_tb.h
esp32/components/provisioning/: CMakeLists.txt  provisioning.c  provisioning.h
esp32/components/sensors/: CMakeLists.txt
esp32/components/sensors/ds18b20/: temperature.c  temperature.h
esp32/components/sensors/max30102/: heart_rate.c  heart_rate.h  i2c_api.c  i2c_api.h
esp32/components/sensors/mpu6050/: mpu6050_api.c  mpu6050_api.h
esp32/components/storage/: CMakeLists.txt  nvs_stoarge.h  nvs_storage.c
esp32/components/sys_button/: CMakeLists.txt  sys_button.c  sys_button.h
esp32/components/wifi/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
esp32/main/: CMakeLists.txt  config.h  idf_component.yml  index.html  index_full.html  index_simple.html  main.c  start.html
esp32/main/display/: oled_display.c  oled_display.h
esp32/main/gpio/: gpio_handler.c
esp32/main/http/: http_server.c  http_server.h
esp32/main/max30102/: algorithm.c  i2c_api.c  i2c_api.h  max30102_api.c  max30102_api.h
esp32/main/mqtt/: mqtt_tb.c
esp32/main/provisioning/: provisioning.c  provisioning.h
esp32/main/sensors/ds18b20/: temperature.h
esp32/main/sensors/max30102/: heart_rate.c  i2c_api.c  max30102_api.c  max30102_api.h
esp32/main/sensors/mpu6050/: mpu6050_api.c  mpu6050_api.h
esp32/main/storage/: nvs_stoarge.h  nvs_storage.c
esp32/main/wifi/: wifi_manager.c  wifi_manager.h
hardware/main/: main.c
public/: index.html
src/: App.css  App.js
src/frontend/components/: Sidebar.css  Sidebar.jsx
src/frontend/layouts/footer/: footer.css  footer.js
src/frontend/layouts/header/: header.css  header.js
src/frontend/layouts/masterLayout/: masterLayout.scss
src/frontend/pages/: homePage.js  homePage.scss
src/frontend/pages/alerts/: Alerts.css  Alerts.jsx
src/frontend/pages/notes/: Notes.css  Notes.jsx
src/frontend/pages/rooms/: RoomList.css  (+1 more)
src/frontend/utils/: api.js  enum.js  routers.js
web/: README.md  package-lock.json  package.json
web/backend/: .env  README.md  app.js  package-lock.json  package.json  server.js
web/backend/controllers/: auth.controller.js  doctor.controller.js  patient.controller.js
web/backend/data/: doctors.js  patients.js  users.js
web/backend/middlewares/: auth.middleware.js
web/backend/routes/: auth.routes.js  doctor.routes.js  patient.routes.js
web/backend/utils/: token-store.js  token.js  validator.js
web/fe/: .gitignore  README.md  index.html  package-lock.json  package.json
web/fe/src/: App.jsx  main.jsx
web/frontend/: .env  App.js  package-lock.json  package.json
web/frontend/elements/: Pagination.jsx
web/frontend/src/: App.js
web/src/: App.js
web/src/backend/: app.js  package-lock.json  package.json  server.js
(+207 files in other folders)
