idf_component_register(
    SRCS 
        "main.c" 
        "../components/storage/nvs_storage.c"
        "../components/wifi/wifi_manager.c"
        "../components/http/http_server.c"
        "../components/mqtt/mqtt_tb.c"
        "../components/provisioning/provisioning.c"
        "../components/sensors/max30102/algorithm.c"
        "../components/sensors/max30102/heart_rate.c"
        "../components/sensors/max30102/i2c_api.c"
        "../components/sensors/max30102/max30102_api.c"
        "../components/sensors/ds18b20/temperature.c"
        "../components/sensors/mpu6050/mpu6050_api.c"
        "../components/gpio/gpio_handler.c"
        "../components/display/oled_display.c"
        "../components/_button/button.cc"
    INCLUDE_DIRS 
        "."
        "../components/storage"
        "../components/wifi"
        "../components/http"
        "../components/mqtt"
        "../components/provisioning"
        "../components/sensors/ds18b20"
        "../components/sensors/max30102"
        "../components/sensors/mpu6050"
        "../components/gpio"
        "../components/display"
        "../components/_button"
)
